Fix #24: Datapath blocking operations hangs in multi threaded model. - Added test cases for multi-threaded model - Fix provided for multi threaded blocking I/O call issue. - Identified certain issues while doing non-blocking I/Os on data items   with invalid permissions. Hence commented those test cases for now.   (Another request needs to be logged for this item.)

--- a/test/reg-test/fam-api-reg/CMakeLists.txt
+++ b/test/reg-test/fam-api-reg/CMakeLists.txt
@@ -64,6 +64,22 @@ add_fam_test(fam_nonfetch_min_max_atomics_reg_test)
 add_fam_test(fam_mm_reg_test)
 #add_fam_test(fam_shm_tests)
 add_fam_test(fam_copy_reg_test)
+add_fam_test(fam_arithmetic_atomics_mt_reg_test)
+add_fam_test(fam_cas_atomics_mt_reg_test)
+add_fam_test(fam_compare_swap_atomics_mt_reg_test)
+add_fam_test(fam_fetch_arithmetic_atomics_mt_reg_test)
+add_fam_test(fam_fetch_logical_atomics_mt_reg_test)
+add_fam_test(fam_fetch_min_max_atomics_mt_reg_test)
+add_fam_test(fam_min_max_atomics_mt_reg_test)
+add_fam_test(fam_nonfetch_arithmetic_atomics_mt_reg_test)
+add_fam_test(fam_nonfetch_logical_atomics_mt_reg_test)
+add_fam_test(fam_nonfetch_min_max_atomics_mt_reg_test)
+add_fam_test(fam_put_get_mt_reg_test)
+add_fam_test(fam_put_get_nb_mt_reg_test)
+add_fam_test(fam_scatter_gather_blocking_mt_reg_test)
+add_fam_test(fam_scatter_gather_nonblocking_mt_reg_test)
+add_fam_test(fam_swap_atomics_mt_reg_test)
+
 
 if (${TEST_ALLOCATOR} STREQUAL "grpc")
 	add_fam_test(fam_put_get_negative_test)
