Fixed #28 Enhance OpenFAM profiling to include datapath and memory server profiles Fixed #27 Fix synchronization issues in KVS map and heap map in memoryserver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,12 @@ if(ENABLE_LIBFABRIC_PROFILING)
 	add_definitions(-DLIBFABRIC_PROFILE)
 endif()
 
+if(ENABLE_MEMORYSERVER_PROFILING)
+	message(STATUS "Memory Server profileenabled")
+	add_definitions(-DMEMSERVER_PROFILE)
+	set( TEST_MEMSERVER_IP "127.0.0.1" )
+endif()
+
 message(STATUS "====================")
 
 #
