Fix for #18 and #19 - Build script modifications:  - Optimize build script to not install on default directories  - Come up with build scripts for centos/rhel flavors.    (The build script has been qualified on centos and can be    used with rhel as well (subject to availability of dependent rpms.) Updated files:         modified:   CMakeLists.txt         modified:   src/rpc/CMakeLists.txt         modified:   third-party/build.sh         new file:   third-party/centos_build.sh         new file:   third-party/nvmm_build_centos.sh

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,7 +110,7 @@ include_directories(${PROJECT_SOURCE_DIR}/third-party/googletest/include)
 # include directories
 #
 include_directories(${PROJECT_SOURCE_DIR}/include) # public headers (include)
-include_directories(${PROJECT_SOURCE_DIR}/third-party/build/include) # third-party headers (include)
+include_directories(SYSTEM ${PROJECT_SOURCE_DIR}/third-party/build/include) # third-party headers (include)
 include_directories(${PROJECT_SOURCE_DIR}/test/util) # utility functions
 include_directories(${PROJECT_SOURCE_DIR}/src) # private headers (src)
 include_directories(${PROJECT_SOURCE_DIR}/src/pmi) # private headers (src)
