Added VERSION file and use the version in OpenFAM library      Added a new VERSION file. This file will contain the OpenFAM library      version number of the form "<major>.<minor>.<release>.".      The contents of the file will be 0.0.0 in devel branch.      In the master branch the file will contain version number as appropriate.      The OpenFAM library will have version number appended to it.      eg: libopenfam.so.0.4.0.      Also added version to memoryserver binary. It can be printed using      ./memoryserver --version.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,6 +176,10 @@ set( TEST_RUNTIME_OPTS --allow-run-as-root -n ${TEST_NPE} ) # path to mpirun/pru
 # Include fam_test_config.h in individual test cases and use the above variables as macros.
 configure_file( ${PROJECT_SOURCE_DIR}/test/common/fam_test_config.h.in ${PROJECT_BINARY_DIR}/test/common/fam_test_config.h )
 
+# Read version number from VERSION file
+file(STRINGS "VERSION" VERSION_STR)
+add_definitions(-DOPENFAM_VERSION="${VERSION_STR}")
+
 #
 # add source code
 #
