--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,8 +28,6 @@ add_subdirectory(metadata)
 add_subdirectory(bitmap-manager)
 add_subdirectory(rpc)
 
-file(STRINGS "../VERSION" version_str)
-add_definitions(-DOPENFAM_VERSION="${version_str}") 
 add_library(openfam SHARED ${LIBOPENFAM_SRC})
 
 if(USE_BOOST_FIBER)
@@ -39,5 +37,5 @@ else()
 endif()
 add_executable (memoryserver ${MEMORYSERVER_SRC})
 
-set_target_properties(openfam PROPERTIES SOVERSION ${version_str})
+set_target_properties(openfam PROPERTIES SOVERSION ${VERSION_STR})
 target_link_libraries(memoryserver fabric fammetadata grpc grpc++ grpc++_reflection nvmm boost_system fambitmap)
