--- a/src/fam-api/CMakeLists.txt
+++ b/src/fam-api/CMakeLists.txt
@@ -25,7 +25,7 @@ set(LIBOPENFAM_SRC
   ${CMAKE_CURRENT_SOURCE_DIR}/fam.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_descriptor.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_ops_libfabric.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/fam_ops_nvmm.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_ops_shm.cpp
   PARENT_SCOPE
   )
 set(MEMORYSERVER_SRC
