Fix #47: Adding fam_stat API in place of fam_size API. 	- fam_stat API gives size, permission and name info for 	a given region/data item descriptor.

--- a/test/reg-test/fam-api-reg/CMakeLists.txt
+++ b/test/reg-test/fam-api-reg/CMakeLists.txt
@@ -46,7 +46,6 @@ add_fam_test(fam_scatter_gather_index_nonblocking_reg_test)
 add_fam_test(fam_scatter_gather_stride_nonblocking_reg_test)
 add_fam_test(fam_noperm_reg_test)
 add_fam_test(fam_invalid_offset_reg_test)
-add_fam_test(fam_size_reg_test)
 add_fam_test(fam_fetch_arithmatic_atomics_reg_test)
 add_fam_test(fam_fetch_logical_atomics_reg_test)
 add_fam_test(fam_fetch_min_max_atomics_reg_test)
@@ -110,4 +109,5 @@ endif()
 #add_fam_test(fam_put_get_nb_mt_reg_test)
 #add_fam_test(fam_scatter_gather_nonblocking_mt_reg_test)
 #add_fam_test(fam_swap_atomics_mt_reg_test)
-
+add_fam_test(fam_stat_reg_test)
+add_fam_test(fam_stat_reg_test_shm)
