Resolved review comment - Updated API description in fam.h header file. - Merged the commit with multiple memory server code changes. - Made changes to example API invocation following new specification. - Updated .gitignore with new path to rpc files. - Replaced ERROR_MSG macro with THROW_ERR_MSG/THROW_ERRNO_MSG

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 build/
-src/rpc/fam_rpc.grpc.pb.cc
-src/rpc/fam_rpc.grpc.pb.h
-src/rpc/fam_rpc.pb.cc
-src/rpc/fam_rpc.pb.h
+src/cis/fam_cis_rpc.grpc.pb.cc
+src/cis/fam_cis_rpc.grpc.pb.h
+src/cis/fam_cis_rpc.pb.cc
+src/cis/fam_cis_rpc.pb.h
 third-party/build/
 third-party/grpc/
 third-party/libfabric/
