Fix #57: Create YAML configuration files for OpenFAM - Updated based on review comments from Mashood  (Moved test file to test/unit-test/config folder and created sample config file) - Updated CMakeLists.txt to copy the config file during make install.

--- a/test/unit-test/CMakeLists.txt
+++ b/test/unit-test/CMakeLists.txt
@@ -28,3 +28,4 @@ add_subdirectory(allocator)
 add_subdirectory(fam-api)
 add_subdirectory(metadata)
 add_subdirectory(bitmap-manager)
+add_subdirectory(config)
