Fix #57: Create YAML configuration files for OpenFAM (#58)
* Fix #57: Create YAML configuration files parsing wrapper 

 - Created header files to access yaml config files

--- a/test/unit-test/config/CMakeLists.txt
+++ b/test/unit-test/config/CMakeLists.txt
@@ -1,6 +1,6 @@
  #
  # CMakeLists.txt
- # Copyright (c) 2019 Hewlett Packard Enterprise Development, LP. All rights reserved.
+ # Copyright (c) 2020 Hewlett Packard Enterprise Development, LP. All rights reserved.
  # Redistribution and use in source and binary forms, with or without modification, are permitted provided
  # that the following conditions are met:
  # 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
@@ -19,20 +19,11 @@
  # See https://spdx.org/licenses/BSD-3-Clause
  #
  #
-function (add_pmix_test file_name)
-        add_executable(${file_name} ${file_name}.cpp)
-        target_link_libraries(${file_name} openfam pmix pmi2)
-	add_test(NAME ${file_name} COMMAND ${PROJECT_SOURCE_DIR}/third-party/build/bin/mpirun --allow-run-as-root -np 2 ${CMAKE_CURRENT_BINARY_DIR}/${file_name})
-	#add_test(NAME ${file_name} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/../third-party/build/bin/mpirun --allow-run-as-root -np 2 ${CMAKE_CURRENT_BINARY_DIR}/${file_name})
+function (add_fam_test file_name)
+    add_executable(${file_name} ${file_name}.cpp)
+    target_link_libraries(${file_name} openfam gtest yaml-cpp)
+    add_test(NAME ${file_name} COMMAND ${TEST_RUNTIME_BIN} ${TEST_RUNTIME_OPTS} ${CMAKE_CURRENT_BINARY_DIR}/${file_name} ${CMAKE_CURRENT_BINARY_DIR}/sample_config)
 endfunction()
-#add tests
-if (${TEST_RUNTIME} STREQUAL "PMI2")
-	add_pmix_test(pmi2_test)
-	add_pmix_test(fam_initialize_runtime_pmi2)
-elseif (${TEST_RUNTIME} STREQUAL "PMIX")
-	add_pmix_test(pmix_test)
-	add_pmix_test(pmix_abort)
-	add_pmix_test(fam_initialize_runtime_pmix)
-endif()
-add_pmix_test(fam_initialize_runtime_none)
 
+#add tests
+add_fam_test(fam_config_info)
