--- a/test/unit-test/metadata/CMakeLists.txt
+++ b/test/unit-test/metadata/CMakeLists.txt
@@ -1,6 +1,6 @@
  #
  # CMakeLists.txt
- # Copyright (c) 2019 Hewlett Packard Enterprise Development, LP. All rights reserved.
+ # Copyright (c) 2019-2020 Hewlett Packard Enterprise Development, LP. All rights reserved.
  # Redistribution and use in source and binary forms, with or without modification, are permitted provided
  # that the following conditions are met:
  # 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
@@ -29,4 +29,5 @@ endfunction()
 
 #add tests
 add_fam_test(fam_metadata_test)
+add_fam_test(fam_metadata_rpc_test)
 #add_fam_test(fam_metadata_regress_test)
