Addressing second set of commit 1] Adding compile time option to select RPC version of metadata service 2] Changing name from Fam_Metadata_Manager to Fam_Metadata_Service

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,9 +132,7 @@ include_directories(/usr/local/include)
 
 set( TEST_DEFAULT_REGION "Default" )
 set( TEST_MEMORY_SERVER "0:127.0.0.1" )
-set( TEST_METADATA_SERVER "127.0.0.1" )
 set( TEST_GRPC_PORT "8787" )
-set( TEST_METADATA_RPC_PORT "8989" )
 set( TEST_LIBFABRIC_PORT "7500" )
 set( TEST_LIBFABRIC_PROVIDER "sockets" )
 set( TEST_FAM_THREAD_MODEL "FAM_THREAD_SERIALIZE" )
@@ -147,7 +145,15 @@ if (ARG_ALLOCATOR)
 	set( TEST_ALLOCATOR ${ARG_ALLOCATOR})
 endif()
 
+if (ENABLE_METADATA_RPC)
+	message(STATUS "Using Metadata RPC interface")
+	add_definitions(-DMETADATA_RPC)
+	add_definitions(-DMETADATA_SERVER="127.0.0.1")
+	add_definitions(-DMETADATA_RPC_PORT=8989)
+endif()
+
 if (${TEST_ALLOCATOR} STREQUAL "SHM") 
+	message(STATUS "Building shared memory model")
 	add_definitions(-DSHM)
 endif()
 
