--- a/test/unit-test/fam-api/CMakeLists.txt
+++ b/test/unit-test/fam-api/CMakeLists.txt
@@ -59,7 +59,7 @@ add_fam_test(fam_copy_test)
 if (${TEST_ALLOCATOR} STREQUAL "grpc")
 	add_fam_test(fam_invalid_key_test)
 	add_fam_test(fam_fence_test)
-elseif (${TEST_ALLOCATOR} STREQUAL "NVMM")
+elseif (${TEST_ALLOCATOR} STREQUAL "SHM")
 	add_fam_test(fam_allocate_map_nvmm)
 	add_fam_test(fam_compare_swap_atomics_nvmm_test)
 	add_fam_test(fam_fetch_arithmatic_atomics_nvmm_test)
