--- a/test/unit-test/metadata/CMakeLists.txt
+++ b/test/unit-test/metadata/CMakeLists.txt
@@ -29,5 +29,8 @@ endfunction()
 
 #add tests
 add_fam_test(fam_metadata_test)
-add_fam_test(fam_metadata_rpc_test)
+if (ENABLE_METADATA_RPC)
+	message(STATUS "Building test case for metadata RPC interface")
+	add_fam_test(fam_metadata_rpc_test)
+endif()
 #add_fam_test(fam_metadata_regress_test)
