Fix #66: Update configuration files for Memory Server, Metadata Manager and Client Interface Server

--- a/config/fam_pe_config.yaml
+++ b/config/fam_pe_config.yaml
@@ -17,3 +17,7 @@ provider : "sockets"
 
 # Allocator to be used, default is grpc, Other option is SHM.
 allocator : "grpc"
+
+# Runtime option
+runtime : "PMIX"
+
