--- a/src/metadata/CMakeLists.txt
+++ b/src/metadata/CMakeLists.txt
@@ -1,6 +1,6 @@
  #
  # CMakeLists.txt
- # Copyright (c) 2019 Hewlett Packard Enterprise Development, LP. All rights reserved.
+ # Copyright (c) 2019-2020 Hewlett Packard Enterprise Development, LP. All rights reserved.
  # Redistribution and use in source and binary forms, with or without modification, are permitted provided
  # that the following conditions are met:
  # 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
@@ -19,8 +19,25 @@
  # See https://spdx.org/licenses/BSD-3-Clause
  #
  #
+#compile .proto filr using protoc compiler
+execute_process(COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../../third-party/build/bin/protoc --grpc_out=${CMAKE_CURRENT_SOURCE_DIR} --proto_path=${CMAKE_CURRENT_SOURCE_DIR} 
+	--plugin=protoc-gen-grpc=${CMAKE_CURRENT_SOURCE_DIR}/../../third-party/build/bin/grpc_cpp_plugin ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_rpc.proto
+                COMMAND  ${CMAKE_CURRENT_SOURCE_DIR}/../../third-party/build/bin/protoc --cpp_out=${CMAKE_CURRENT_SOURCE_DIR} --proto_path=${CMAKE_CURRENT_SOURCE_DIR}                       ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_rpc.proto)
 
-add_library(fammetadata SHARED fam_metadata_manager.cpp)
-add_definitions(-DFAM_ATOMIC_NATIVE)
+set(METADATA_CLIENT_SRC
+  ${METADATA_CLIENT_SRC}
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_rpc.grpc.pb.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_rpc.pb.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_service_direct.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_service_client.cpp
+  PARENT_SCOPE
+  )
 
-target_link_libraries(fammetadata nvmm famradixtree)
+set(METADATA_SERVER_SRC
+  ${METADATA_SERVER_SRC}
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_rpc.grpc.pb.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_rpc.pb.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_service_direct.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_service_server.cpp
+  PARENT_SCOPE
+  )
