--- a/config/fam_metadata_config.yaml
+++ b/config/fam_metadata_config.yaml
@@ -4,4 +4,4 @@
 metadata_manager : "radixtree"
  
 # Path where metadata info is stored. By default, it will be placed in /dev/shm. 
-metadata_path: /dev/shm/
+metadata_path: /dev/shm/radixtree
