--- a/config/fam_client_interface_config.yaml
+++ b/config/fam_client_interface_config.yaml
@@ -1,26 +1,38 @@
 #FAM Client Interface Service Config file
 
-# List of memory servers that is associated with metadata manager.
-#memsrv_ip :
-#- 0:<ip_address_1>:<port_no>
-#- 1:<ip_address_2>:<port_no>
-#- 3:<ip_address_3>:<port_no>
-#- 2:<ip_address_4>:<port_no>
-memsrv_ip :
-- 0:127.0.0.1:8787
-
-# metadata manager ip address
-#metadata_ips:
-#- 0:<md_ ip_address_1>:<port_no>
-#- 1:<md_ ip_address_2>:<port_no>
-metadata_ips:
-- 0:127.0.0.1:8787
-
-# grpc port used to communication with Memory Servers.
-grpc_port: 8787
-
 # Memory Server Interface used by OpenFAM. default is direct. Other option is rpc.
-memsrv_interface: direct
+# memsrv_interface_type value of rpc implies communication between memory server and client interface via rpc.
+# memsrv_interface_type value of direct implies communication happens via function calls.
+memsrv_interface_type: direct
 
 # Metadata Server Interface used by OpenFAM. default is direct. Other option is rpc.
-metadata_interface: direct
+# metadata_interface_type value of rpc implies communication between metadata server and client interface via rpc.
+# metadata_interface_type value of direct implies communication happens via function calls.
+metadata_interface_type: direct
+
+# List of memory servers.
+# Applicable only if memsrv_interface_type is rpc.
+#Format:
+#memsrv_list :
+#- <memsrv_id1>:<ip_address_1>:<port_no>
+#- <memsrv_id2>:<ip_address_2>:<port_no>
+#- <memsrv_id3>:<ip_address_3>:<port_no>
+#- <memsrv_id4>:<ip_address_4>:<port_no>
+# Here memsrv_id is a unique number associated a with memory server.
+#
+# Example:
+# 5:127.0.0.1:8787
+memsrv_list:
+- 0:127.0.0.1:8787
+
+# List of metadata servers
+# Applicable only if metadata_interface_type is rpc.
+#Format:
+#metadata_list:
+#- <metadata_id1>:<md_ ip_address_1>:<port_no>
+#- <metadata_id2>:<md_ ip_address_2>:<port_no>
+#
+# Example:
+# 5:127.0.0.1:8788
+metadata_list:
+- 0:127.0.0.1:8788
