--- a/config/fam_memoryserver_config.yaml
+++ b/config/fam_memoryserver_config.yaml
@@ -1,4 +1,4 @@
 # MemoryServer Config file
 # Path where data is stored.
-# By default NVMM default location will be selected (which by default is /dev/shm/<username>.
-# data_path: /dev/shm/
+# By default NVMM default location will be selected (which by default is /dev/shm/<username>).
+# fam_path: /dev/shm/
