--- a/config/fam_client_interface_config.yaml
+++ b/config/fam_client_interface_config.yaml
@@ -20,7 +20,7 @@ metadata_interface_type: direct
 #- <memsrv_id3>:<host_address_3>:<port_no>
 #- <memsrv_id4>:<host_address_4>:<port_no>
 # Here memsrv_id is a unique number associated a with memory server.
-# And host_address can be hostname/ipv4/ipv6 addresses.
+# And host_address can be hostname (fully qualified domain name)/ipv4 address.
 #
 # Example:
 # 5:127.0.0.1:8787
@@ -34,7 +34,7 @@ memsrv_list:
 #- <metadata_id1>:<md_ host_address_1>:<port_no>
 #- <metadata_id2>:<md_ host_address_2>:<port_no>
 # Here metadata_id is a unique number associated a with metadata server.
-# And host_address can be hostname/ipv4/ipv6 addresses.
+# And host_address can be hostname (fully qualified domain name)/ipv4 address.
 #
 # Example:
 # 5:127.0.0.1:8788
