Fix #66: Configuration files for Memory Server, Metadata Server and Client Inerface Server - Minor corrections in comments

--- a/config/fam_client_interface_config.yaml
+++ b/config/fam_client_interface_config.yaml
@@ -9,12 +9,13 @@ memsrv_interface_type: direct
 # metadata_interface_type value of direct implies communication happens via function calls.
 metadata_interface_type: direct
 
-#Client Interface Service Address
-# Applicable only if client_interface_type (defined in fam_pe_config.yaml) is rpc.
+# Rpc interface
+# Rpc interface used by client interface service rpc server.
+# The PE's connect to this address if the client_interface_type is (defined in fam_pe_config.yaml) is rpc.
 #Format:
 #rpc_interface: <interface_address>:<portno>
 # where interface address is hostname (fqdn)/ip4 address where grpc port should be exposed.
-# portno is port to be used by OpenFAM for communication with Client Interface Service
+# portno is port to be used by OpenFAM for communication with Client Interface Service.
 rpc_interface: 127.0.0.1:8789
 
 # List of memory servers.
