--- a/config/fam_memoryserver_config.yaml
+++ b/config/fam_memoryserver_config.yaml
@@ -3,12 +3,15 @@
 # By default NVMM default location will be selected (which by default is /dev/shm/<username>).
 # fam_path: /dev/shm/username
 #
-#Memory Server Address
-# Applicable only if memsrv_interface_type(defined in fam_client_interface_config.yaml) is rpc.
+# Rpc interface
+# Rpc interface used by client interface service rpc server.
+# The Client Interface Service connect to this address if the memsrv_interface_type
+# (defined in fam_client_interface_config.yaml) is rpc.
 #Format:
 #rpc_interface: <interface_address>:<portno>
 # where interface address is hostname (fqdn)/ip4 address where grpc port should be exposed.
-# portno is port to be used by OpenFAM for communication with Client Interface Service
+# portno is port to be used by OpenFAM for communication between Memory Server and
+# Client Interface Service.
 rpc_interface: 127.0.0.1:8787
 
 # Libfabric provider to be used by OpenFAM libfabric datapath operations; default is sockets.
