--- a/config/fam_metadata_config.yaml
+++ b/config/fam_metadata_config.yaml
@@ -8,7 +8,9 @@ metadata_manager: radixtree
 metadata_path: /dev/shm/
 
 # Rpc interface
-# Rpc interface used by client interface service rpc server.
+# Rpc interface used by metadata rpc server.
+# Rpc address used by metadata rpc server to accept connections from Client Interface Service.
+#
 # The Client Interface Service connect to this address if the metadata_interface_type
 # (defined in fam_client_interface_config.yaml) is rpc.
 #Format:
