--- a/test/config_files/config-cis-rpc-meta-direct-mem-rpc/config/fam_client_interface_config.yaml
+++ b/test/config_files/config-cis-rpc-meta-direct-mem-rpc/config/fam_client_interface_config.yaml
@@ -2,7 +2,7 @@
 # Memory Server Interface used by OpenFAM. default is direct. Other option is rpc.
 # memsrv_interface_type value of rpc implies communication between memory server and client interface via rpc.
 # memsrv_interface_type value of direct implies communication happens via function calls.
-memsrv_interface_type: direct
+memsrv_interface_type: rpc
 
 # Metadata Server Interface used by OpenFAM. default is direct. Other option is rpc.
 # metadata_interface_type value of rpc implies communication between metadata server and client interface via rpc.
