--- a/test/config_files/config-cis-direct-meta-direct-mem-direct/config/fam_pe_config.yaml
+++ b/test/config_files/config-cis-direct-meta-direct-mem-direct/config/fam_pe_config.yaml
@@ -9,7 +9,7 @@ provider: sockets
 
 # OpenFAM model to be used; default is memory_server, Other option is shared_memory.
 # For shared_memory model, FAM should be present in same node as PE.
-openfam_model: memory_server
+openfam_model: shared_memory
 
 # Runtime option used for OpenFAM; default is  PMIX. Other options is PMI2
 runtime: PMIX
@@ -17,7 +17,7 @@ runtime: PMIX
 # Client Interace Type for OpenFAM; default is direct. Other option is rpc
 # client_interface_type value of rpc implies communication between PE and client interface via rpc.
 # client_interface_type value of direct implies communication happens via function calls.
-client_interface_type: rpc
+client_interface_type: direct
 
 # Address of Client Interface Service - It can be hostname (fully qualified domain name)/ipv4 address.
 # Applicable only if client_interface_type is rpc.
